2000-05-06  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* Frame/IRCAM2.pm: Add

2000-05-04  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/CGS4.pm: Add rows to the calibration object 

2000-05-03  Tim Jenness  <timj@jach.hawaii.edu>

	* Index.pm (verify): Return immediately if name is not defined. 

2000-05-02  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (orac_store_frm_in_correct_grp): Remove spurious unlink
	and ensure that the group file name uses the group name if the group
	name is a number.

2000-05-01  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/CGS4.pm (file_from_bits): Zero pad filename
	(flag_from_bits): Remove suffix from raw name

2000-04-27  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/CGS4.pm (findrecipe): Protect against -w

2000-04-26  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib.pm (standard): More helpful error message

2000-04-22  Tim Jenness  <timj@jach.hawaii.edu>

	* Msg/ADAM/Task.pm: Use &Starlink::ADAM::DTASK__ACTCOMPLETE

	* Inst/IRCAM.pm (start_msg_sys):  Add support for 'preserve' flag.
	
	* Inst/CGS4.pm (start_msg_sys):  Add support for 'preserve' flag.

	* Inst/SCUBA.pm (start_msg_sys): Add support for 'preserve' flag.

2000-04-07  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/GAIA.pm (send_to_gaia): increase the timeout

2000-04-04  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm (iscalsource): Allow filter to be undefined.

	* Basic.pm (orac_parse_recipe): Pod sections were not being
	included in the recipes.

2000-04-03  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm (orac_parse_recipe): Put upper limit on recursion depth

	* Core.pm (orac_process_frame): Modify so that orac_parse_recipe
	is not called multiple times by this routine since that routine is 
	now recursive.

	* Basic.pm (orac_parse_recipe): Read recipe primitives and parse
	using recursion. This is more efficient than reparsing the same
	recipe multiple times. Automatically ignore POD sections.

2000-03-30  Tim Jenness  <timj@jach.hawaii.edu>
