@@ -1,3 +1,14 @@
+2000-05-10  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Display/GAIA.pm (send_to_gaia): Rewrite to be a lot cleaner code 
+	(sorry Casey).
+	(image): Relaunch GAIA if required. Create new clones if required.
+
+2000-05-09  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Frame/IRCAM2.pm (template): Zero pad numbers
+	
+
 2000-05-06  Tim Jenness  <t.jenness@jach.hawaii.edu>
 
 	* Frame/IRCAM2.pm: Add
